# quad-ci

./: Notes.org  default.nix  quad.cabal
QuadCi/: Hello.hs
app/: Main.hs
src/: Core.hs  Docker.hs
test/: Spec.hs
