cabal-version:       >=1.10

name:                quad
version:             0.1.1.0
build-type:          Simple

library
  exposed-modules:     QuadCi.Hello
  build-depends:       base >=4.0 && <5
  default-language:    Haskell2010

executable quad
  main-is: ./app/Main.hs
  build-depends: base >=4.0 && <5
               , quad
  
  