name:                quad
version:             0.0.1.0
build-type:          Simple
cabal-version:       >= 1.8

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Core
  build-depends:       base >=4.0 && <5
                     , aeson
                     , async
                     , butcher
                     , hslogger
                     , http-client
                     , http-conduit
                     , network
                     , record-hasfield
                     , rio
                     , scotty
                     , serialise
                     , stm
                     , time
                     , typed-process
                     , wai-cors
                     , yaml
  default-extensions:
                       BlockArguments
                       DeriveAnyClass
                       DeriveGeneric
                       LambdaCase
                       NoImplicitPrelude
                       OverloadedStrings
                       StrictData
  ghc-options:
                       -F -pgmF=record-dot-preprocessor
                       
executable quad
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
              -threaded
              -rtsopts
              -with-rtsopts=-N
  build-depends: base >=4.0 && <5
               , quad
               , rio    
               
               
              
  